--- a/web2/src/style.css
+++ b/web2/src/style.css
@@ -7,10 +7,88 @@
  * PSD by Liam McCabe: https://goo.gl/md3Dj
  */
 
- body {
-    font: 12px/20px "Lucida Grande", Tahoma, Verdana, sans-serif;
-    color: #404040;
-    background: #dce1e1;
+ @import url('https://fonts.googleapis.com/css?family=Rubik:500');
+
+* {
+  padding:0;
+  margin:0;
+}
+
+body {
+  font-family: 'Rubik', sans-serif;
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background: #CCD1D9;
+}
+  .button {
+    padding: 16px 42px;
+    box-shadow: 0px 0px 12px -2px rgba(0,0,0,0.5);
+    line-height: 1.25;
+    background: #FC6E51;
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    letter-spacing: .08em;
+    text-transform: uppercase;
+    position: relative;
+    transition: background-color .6s ease;
+    overflow: hidden;
+    &:after {
+      content: "";
+      position: absolute;
+      width: 0;
+      height: 0;
+      top: 50%;
+      left: 50%;
+      transform-style: flat;
+      transform: translate3d(-50%,-50%,0);
+      background: rgba(white,.1);
+      border-radius: 100%;
+      transition: width .3s ease, height .3s ease;
+    }
+    &:focus,
+    &:hover {
+        background: darken(#FC6E51,7%);
+    }
+    &:active {
+      &:after {
+        width: 200px;
+        height: 200px;
+      }
+    }
+  }
+  
+  /* optional reset for presentation */
+  * {
+    font-family: Arial;
+    text-decoration: none;
+    font-size: 20px;
+  }
+  .container {
+    padding-top: 50px;
+    margin: 0 auto;
+    width: 100%;
+    text-align: center;
+  }
+  h1 {
+    text-transform: uppercase;
+    font-size: .8rem;
+    margin-bottom: 2rem;
+    color: #777;
+  }
+  span {
+    display: block;
+    margin-top: 2rem;
+    font-size: .7rem;
+    color: #777;
+    a {
+      font-size: .7rem;
+      color: #999;
+      text-decoration: underline;
+    }
   }
   
   .notepaper {
